nginx/ingress-hubble.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: hubble.20.126.189.207.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
            path: /
